# vcpkg-sqlite-demo

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  demo.cpp  run.ps1  vcpkg.json
.github/workflows/: cmake.yml
